--- a/.github/workflows/dserver-api-vs-dserver-container-composition-cross-test.yml
+++ b/.github/workflows/dserver-api-vs-dserver-container-composition-cross-test.yml
@@ -43,6 +43,8 @@ jobs:
         sudo chown runner:docker /var/run/docker.sock
         # see https://github.com/nektos/act/issues/724#issuecomment-855390956
 
+        echo "y" | bash maintenance/replace_hostname.sh localhost
+        source .env
         source env.testing.rc
 
         echo "printenv"
@@ -78,7 +80,7 @@ jobs:
         docker compose ${DOCKER_COMPOSE_OPTS} logs dserver
         
         echo "dserver client log"
-        docker compose ${DOCKER_COMPOSE_OPTS} logs dserver_client
+        docker compose ${DOCKER_COMPOSE_OPTS} logs dtool
 
         echo "s3server log"
         docker compose  ${DOCKER_COMPOSE_OPTS} logs s3server
@@ -93,23 +95,16 @@ jobs:
         docker compose ${DOCKER_COMPOSE_OPTS} exec -T dserver /refresh_index
 
         echo "dtool query '{}'"
-        docker compose ${DOCKER_COMPOSE_OPTS} run dserver_client query '{}'
-
-    - name: Install basic testing requirements
-      working-directory: dtool-lookup-api
-      run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade setuptools wheel setuptools-scm[toml] importlib-metadata
-        pip install pytest pytest-cov pytest-ordering
+        docker compose ${DOCKER_COMPOSE_OPTS} run dtool query '{}'
 
     - name: Install dtool-lookup-api
       working-directory: dtool-lookup-api
       run: |
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install ".[testing]"
-        echo "pip list"
+        python -m pip install --upgrade pip
+        pip install .[test]
         pip list
 
+    # TODO: test against local dserver instance
     - name: Run dtool-lookup-api tests
       working-directory: dtool-lookup-api
       run: pytest
