--- a/.github/workflows/dtool-lookup-api-test.yml
+++ b/.github/workflows/dtool-lookup-api-test.yml
@@ -75,7 +75,7 @@ jobs:
         docker compose ${DOCKER_COMPOSE_OPTS} logs dserver
         
         echo "dserver client log"
-        docker compose ${DOCKER_COMPOSE_OPTS} logs dserver_client
+        docker compose ${DOCKER_COMPOSE_OPTS} logs dtool
 
         echo "s3server log"
         docker compose  ${DOCKER_COMPOSE_OPTS} logs s3server
@@ -90,19 +90,13 @@ jobs:
         docker compose ${DOCKER_COMPOSE_OPTS} exec -T dserver /refresh_index
 
         echo "dtool query '{}'"
-        docker compose ${DOCKER_COMPOSE_OPTS} run dserver_client query '{}'
-
-    - name: Install basic testing requirements
-      run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade setuptools wheel setuptools-scm[toml] importlib-metadata
-        pip install flake8 pytest pytest-cov pytest-ordering
+        docker compose ${DOCKER_COMPOSE_OPTS} run dtool query '{}'
 
     - name: Install this package
       run: |
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install ".[testing]"
-        echo "pip list"
+        python -m pip install --upgrade pip
+        pip install flake8
+        pip install .[test]
         pip list
 
     - name: Lint with flake8
