--- a/.github/workflows/dtool-lookup-framework-generic-container-image-build-and-test.yml
+++ b/.github/workflows/dtool-lookup-framework-generic-container-image-build-and-test.yml
@@ -180,7 +180,7 @@ jobs:
       run: |
         # override composition defaults to use local image
         # use commit-specific github sha tag to identify image built above correctly
-        echo '{"version":"2","services":{"${{ inputs.service }}":{"image":"${{ inputs.image }}:sha-${{ github.sha }}"}}}' | yq e . -o yaml -P - >  docker-compose.current_build.versions.yml
+        echo '{"services":{"${{ inputs.service }}":{"image":"${{ inputs.image }}:sha-${{ github.sha }}"}}}' | yq e . -o yaml -P - >  docker-compose.current_build.versions.yml
 
         echo "generated docker-compose.current_build.versions.yml"
         cat docker-compose.current_build.versions.yml
@@ -218,7 +218,7 @@ jobs:
         docker compose ${DOCKER_COMPOSE_OPTS} logs dserver
         
         echo "dserver client log"
-        docker compose ${DOCKER_COMPOSE_OPTS} logs dserver_client
+        docker compose ${DOCKER_COMPOSE_OPTS} logs dtool
 
         echo "s3server log"
         docker compose  ${DOCKER_COMPOSE_OPTS} logs s3server
@@ -233,23 +233,16 @@ jobs:
         docker compose ${DOCKER_COMPOSE_OPTS} exec -T dserver /refresh_index
 
         echo "dtool query '{}'"
-        docker compose ${DOCKER_COMPOSE_OPTS} run dserver_client query '{}'
-
-    - name: Install basic testing requirements
-      working-directory: dtool-lookup-api
-      run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade setuptools wheel setuptools-scm[toml] importlib-metadata
-        pip install pytest pytest-cov pytest-ordering
+        docker compose ${DOCKER_COMPOSE_OPTS} run dtool query '{}'
 
     - name: Install dtool-lookup-api
       working-directory: dtool-lookup-api
       run: |
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install ".[testing]"
-        echo "pip list"
+        python -m pip install --upgrade pip
+        pip install .[test]
         pip list
 
+    # TODO: test against local dserver instance
     - name: Run dtool-lookup-api tests
       working-directory: dtool-lookup-api
       run: pytest
